--- a/chat/package.json
+++ b/chat/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "socket.io": "^4.8.1"
