--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.12",
     "antd": "^5.27.2",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vietnam-qr-pay": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
