--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,8 @@
 VITE_SOCKET_URL=http://localhost:4000
+
+VITE_FIREBASE_API_KEY=AIzaSyBL3FLlU7LuVyCYrrqiM3bHcJ2ukt5vwPs
+VITE_FIREBASE_AUTH_DOMAIN=multiple-authentication-97210.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=yourmultiple-authentication-97210_project_id
+VITE_FIREBASE_STORAGE_BUCKET=multiple-authentication-97210.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=281442831787
+VITE_FIREBASE_APP_ID=1:281442831787:web:408a0282057d51de5b96ee
