--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "firebase-admin": "^13.5.0",
     "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
