--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# Build Vite app
 FROM node:18 AS build
 
 WORKDIR /app
@@ -7,11 +6,15 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# S Nginx serve
+# Stage 2: Serve với Nginx
 FROM nginx:alpine
 
+# Copy file build vào Nginx
 COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy config Nginx custom
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
