--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,11 +1,15 @@
 server {
   listen 80;
-  server_name _;
 
   root /usr/share/nginx/html;
   index index.html;
 
   location / {
     try_files $uri /index.html;
+  }
+
+  # Proxy API sang backend
+  location /api/ {
+    proxy_pass http://backend:4000;
   }
 }
