--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.27.2",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
+    "firebase": "^12.2.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "qrcode": "^1.5.4",
