--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_SOCKET_URL=http://localhost:4000
+VITE_SOCKET_URL=http://172.236.138.136:4000
 
 VITE_FIREBASE_API_KEY=AIzaSyBL3FLlU7LuVyCYrrqiM3bHcJ2ukt5vwPs
 VITE_FIREBASE_AUTH_DOMAIN=multiple-authentication-97210.firebaseapp.com
