--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "pm2-runtime index.js",
+    "dev": "nodemon index.js",
+    "pm2": "pm2 start index.js --no-daemon"
+
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
@@ -23,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
+    "pm2": "^6.0.10",
     "socket.io": "^4.8.1"
   }
 }
