--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,15 +1,19 @@
 server {
-  listen 80;
+    listen 80;
 
-  root /usr/share/nginx/html;
-  index index.html;
+    root /usr/share/nginx/html;
+    index index.html;
 
-  location / {
-    try_files $uri /index.html;
-  }
+    location / {
+        try_files $uri /index.html;
+    }
 
-  # Proxy API sang backend
-  location /api/ {
-    proxy_pass http://backend:4000;
-  }
+    location /api/ {
+        proxy_pass http://backend:4000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
