--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,17 @@ version: "3.9"
 
 services:
   backend:
-    image: node:22-alpine
+    build: ./backend  # dùng Dockerfile 
     container_name: node_backend
-    working_dir: /app
-    volumes:
-      - ./backend:/app
     ports:
       - "4000:4000"
-    command: npm start
+
 
   frontend:
-    image: nginx:alpine
+    build: ./frontend
     container_name: vite_frontend
-    volumes:
-      - ./frontend/dist:/usr/share/nginx/html
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
     depends_on:
       - backend
+
