--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@ version: "3.9"
 
 services:
   backend:
-    build: ./backend  # dùng Dockerfile 
+    build: ./backend
     container_name: node_backend
     ports:
       - "4000:4000"
-
 
   frontend:
     build: ./frontend
     container_name: vite_frontend
     volumes:
-      - ./frontend/dist:/usr/share/nginx/html
+      - ./frontend/dist:/dist
     depends_on:
       - backend
-
