--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   frontend:
     build: ./frontend
     container_name: vite_frontend
-    volumes:
-      - ./frontend/dist:/dist
+    ports:
+      - "8080:80"
     depends_on:
       - backend
