--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Vite Deployment
 
 on:
   push:
-    branches: [production] 
+    branches: [production]
 
 jobs:
   deploy:
@@ -20,6 +20,9 @@ jobs:
             git fetch origin
             git checkout production
             git pull
+
             docker-compose down
-            docker-compose build
+            docker-compose build --no-cache
             docker-compose up -d
+
+            docker image prune -f
